[package]
name = "petragen-rust"
version = "0.1.0"
authors = ["Iwan van der Kleijn <ivanderk@capgemini.com>"]
edition = "2018"
license = "APSL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = { version = "1.0", features = ["ssl"] }
# openssl = { version="0.10" }
actix-web = "1.0"
listenfd = "0.3"